[UPDATE] tela de login

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -9,6 +9,8 @@
       <a mat-list-item href="#">Funcionarios</a>
       <a mat-list-item href="#">Pedidos</a>
       <a mat-list-item href="#">Produtos</a>
+      <a mat-list-item href="#" routerLink="login" >Login</a>
+
      
     </mat-nav-list>
   </mat-sidenav>
